metadata-retriever/metadata/objects/Time_Sheet_Detail__c.object
<CustomObject>
    <description>PMO: Timesheet detail work for each day.</description>
    <fields>
        <fullName>Allowance_2__c</fullName>
        <formula>Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Allowance*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowance__c</fullName>
        <formula>IF(AND( CreatedBy.CompanyName == &apos;Bp&apos; , ISPICKVAL(On_Off_Site__c, &apos;On&apos;))   , CreatedBy.Allowance__c* Workload_Hrs__c/8  ,    
       if(AND( CreatedBy.CompanyName == &apos;SFDC&apos; , ISPICKVAL(On_Off_Site__c, &apos;On&apos;)),CreatedBy.Allowance__c* Workload_Hrs__c/8 ,
          if(AND( CreatedBy.CompanyName == &apos;SFDC&apos; , ISPICKVAL(On_Off_Site__c, &apos;Off&apos;)) ,CreatedBy.Allowance__c* Workload_Hrs__c/8 ,
             if(AND( CreatedBy.CompanyName == &apos;NTT DATA EMEA&apos; , ISPICKVAL(On_Off_Site__c, &apos;On&apos;))  ,CreatedBy.Allowance__c* Workload_Hrs__c/8 ,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>user allowance*workload/8</inlineHelpText>
        <label>Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discription__c</fullName>
        <label>Discription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Gap/Fit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Desing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Scenario/Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review on Migration Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review on Migration Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stabilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Cycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMO Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Stream Lead Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Dictionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stream leads standup meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team standup meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Application Architecture Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Mgnt. (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead &amp; Sales Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Sales Mgnt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting &amp; Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll Out Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Role, Profile, Data)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha &amp; Beta review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS / SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Off_Site__c</fullName>
        <label>On/Off Site</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>Time_sheet__c</referenceTo>
        <relationshipLabel>Time Sheet Detail</relationshipLabel>
        <relationshipName>Time_Sheet_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Day__c</fullName>
        <formula>MOD(( Date__c - DATE(2012,12,30)),7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workload_Hrs__c</fullName>
        <label>Workload(Hrs.)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>allowance_shadow__c</fullName>
        <label>allowance shadow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Time Sheet Detail</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Time Sheet Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>working_hours</fullName>
        <active>false</active>
        <description>no more 8 hours per day</description>
        <errorConditionFormula>Workload_Hrs__c &gt;8</errorConditionFormula>
        <errorMessage>no more 8 hours per day</errorMessage>
    </validationRules>
</CustomObject>